--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
+    "chart.js": "^4.4.7",
     "firebase": "^11.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
